--- a/css/style.css
+++ b/css/style.css
@@ -1,536 +1,1 @@
-/* fonts */
-/* line 6, ../sass/style.scss */
-body {
-  font-family: "Open Sans", sans-serif;
-  color: #333; }
-
-/* line 10, ../sass/style.scss */
-h1, h2, h3, h4, h4, h5, h6,
-h2 > a {
-  font-family: "Lora", serif;
-  color: #A2B464;
-  letter-spacing: 1px; }
-
-/* line 17, ../sass/style.scss */
-h1 {
-  font-size: 2.8rem; }
-
-/* line 18, ../sass/style.scss */
-h2 {
-  font-size: 2.2rem; }
-
-/* line 19, ../sass/style.scss */
-h3 {
-  font-size: 2.2rem;
-  color: #56729A; }
-
-/* line 20, ../sass/style.scss */
-h4 {
-  font-size: 2.0rem;
-  color: #56729A; }
-
-/* line 21, ../sass/style.scss */
-h5 {
-  font-size: 1.6rem; }
-
-/* line 22, ../sass/style.scss */
-h6 {
-  font-size: 1.6rem;
-  color: #56729A; }
-
-/* line 23, ../sass/style.scss */
-body, p, li {
-  font-size: 1.6rem; }
-
-/* line 24, ../sass/style.scss */
-li > a, a {
-  color: #56729A; }
-
-/* line 25, ../sass/style.scss */
-li {
-  color: #333; }
-
-/* content */
-/* line 29, ../sass/style.scss */
-#content {
-  min-height: 450px; }
-
-/* misc */
-/* line 37, ../sass/style.scss */
-section {
-  margin: 15px 0; }
-
-/* line 40, ../sass/style.scss */
-.home section img, .featImg img {
-  width: 100%;
-  height: auto; }
-
-/* line 44, ../sass/style.scss */
-.sectionOdd {
-  padding: 15px 0;
-  margin: 0; }
-
-/* line 49, ../sass/style.scss */
-.sectionEven {
-  padding: 15px 0;
-  margin: 0; }
-
-/* line 54, ../sass/style.scss */
-.wrapFooter {
-  background-color: #56729A; }
-
-/* line 57, ../sass/style.scss */
-.marginTop {
-  margin-top: 20px; }
-
-/* line 60, ../sass/style.scss */
-.marginBottom {
-  margin-bottom: 20px; }
-
-/* line 63, ../sass/style.scss */
-.clearfix {
-  clear: both; }
-
-/* line 66, ../sass/style.scss */
-hr {
-  border-top: 1px solid #A2B464; }
-
-/* wordpress alignments */
-/* line 69, ../sass/style.scss */
-img.alignright {
-  float: right;
-  margin: 0 0 1em 1em; }
-
-/* line 70, ../sass/style.scss */
-img.alignleft {
-  float: left;
-  margin: 0 1em 1em 0; }
-
-/* line 71, ../sass/style.scss */
-img.aligncenter {
-  display: block;
-  margin-left: auto;
-  margin-right: auto; }
-
-/* line 72, ../sass/style.scss */
-.alignright {
-  float: right; }
-
-/* line 73, ../sass/style.scss */
-.alignleft {
-  float: left; }
-
-/* line 74, ../sass/style.scss */
-.aligncenter {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center; }
-
-/* wordpress styles */
-/* line 78, ../sass/style.scss */
-p.wp-caption-text {
-  font-size: 1.0em;
-  margin: 10px 0;
-  color: #A2B464;
-  font-style: italic; }
-
-/* logo */
-/* line 86, ../sass/style.scss */
-.sitelogo img, .woocommerce-page .sitelogo img {
-  max-width: 440px;
-  width: 100%; }
-
-/* topmenu */
-/* line 93, ../sass/style.scss */
-#topbar {
-  background-color: #56729A; }
-  /* line 95, ../sass/style.scss */
-  #topbar li {
-    font-size: 1.6rem;
-    border-right: 1px solid #728cb1; }
-  /* line 99, ../sass/style.scss */
-  #topbar .social-links li {
-    margin-left: 15px;
-    margin-right: -5px;
-    border-right: none; }
-  /* line 104, ../sass/style.scss */
-  #topbar .navbar-nav > li > a {
-    padding-top: 8px;
-    padding-bottom: 8px;
-    color: #fff; }
-  /* line 109, ../sass/style.scss */
-  #topbar .navbar-nav > .active > a, #topbar .navbar-nav > li > a:hover {
-    background-color: #fff;
-    color: #56729A; }
-
-@media only screen and (min-width: 768px) {
-  /* line 115, ../sass/style.scss */
-  #topbar {
-    height: 36px; } }
-/* menu */
-/* line 121, ../sass/style.scss */
-.navbar {
-  margin: 0;
-  z-index: 9999;
-  background: none;
-  border: none; }
-  /* line 126, ../sass/style.scss */
-  .navbar li {
-    font-size: 2.0rem; }
-
-/* line 128, ../sass/style.scss */
-.navbar-default, .navbar-default .navbar-nav > li > a {
-  color: #56729A; }
-
-/* line 131, ../sass/style.scss */
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-  background-color: #56729A;
-  color: #fff; }
-
-/* line 136, ../sass/style.scss */
-.navbar-default .navbar-nav > .active > a {
-  color: #A2B464;
-  background: none; }
-
-/* line 142, ../sass/style.scss */
-.dropdown-menu {
-  background-color: #56729A;
-  text-align: right; }
-
-/* line 146, ../sass/style.scss */
-.dropdown-menu > li > a {
-  color: #fff; }
-
-/* line 149, ../sass/style.scss */
-.navbar-default .navbar-nav .open .dropdown-menu > li > a {
-  background-color: #56729A;
-  color: #fff; }
-
-/* line 153, ../sass/style.scss */
-.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
-  background-color: #fff;
-  color: #56729A; }
-
-@media only screen and (max-width: 768px) {
-  /* line 158, ../sass/style.scss */
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-    background-color: white;
-    color: #56729A; }
-
-  /* line 162, ../sass/style.scss */
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
-    background-color: #56729A;
-    color: #fff; } }
-@media only screen and (min-width: 768px) and (max-width: 1200px) {
-  /* line 171, ../sass/style.scss */
-  .navbar li {
-    font-size: 1.4rem; }
-
-  /* line 173, ../sass/style.scss */
-  .nav > li > a {
-    padding: 10px 5px; } }
-/* line 179, ../sass/style.scss */
-.navbar-default .navbar-toggle {
-  border-color: white;
-  background-color: #56729A; }
-
-/* line 183, ../sass/style.scss */
-.navbar-default .navbar-toggle .icon-bar {
-  background-color: white; }
-
-/* line 188, ../sass/style.scss */
-.footermenu ul {
-  margin: 40px 0 0 -40px; }
-
-/* line 191, ../sass/style.scss */
-.footermenu li {
-  display: inline; }
-
-/* line 194, ../sass/style.scss */
-.footermenu li:after {
-  content: " | "; }
-
-/* line 197, ../sass/style.scss */
-.footermenu li:last-child:after {
-  content: " "; }
-
-/* full width nivo slideshow */
-/* line 203, ../sass/style.scss */
-.transwrap {
-  background-color: white;
-  background: rgba(255, 255, 255, 0.9);
-  position: relative;
-  z-index: 1; }
-
-/* line 209, ../sass/style.scss */
-.metaslider {
-  z-index: 0;
-  margin-top: 0px;
-  max-height: 700px;
-  overflow: hidden; }
-
-/* line 215, ../sass/style.scss */
-.nivo-caption {
-  top: 45%;
-  padding: 0 100px !important;
-  text-align: center;
-  font-size: 50px;
-  background: none !important;
-  opacity: 1 !important; }
-
-/* line 223, ../sass/style.scss */
-.theme-default .nivo-caption a {
-  border: 0 !important; }
-
-/* line 226, ../sass/style.scss */
-.theme-default .nivo-caption a:hover {
-  text-decoration: none; }
-
-/* line 229, ../sass/style.scss */
-.theme-default a.nivo-prevNav {
-  left: 40px !important; }
-
-/* line 230, ../sass/style.scss */
-.theme-default a.nivo-nextNav {
-  right: 40px !important; }
-
-@media only screen and (max-width: 480px) {
-  /* line 233, ../sass/style.scss */
-  .theme-default .nivo-caption {
-    display: none !important; } }
-@media only screen and (max-width: 768px) {
-  /* line 239, ../sass/style.scss */
-  .nivo-caption {
-    font-size: 32px;
-    top: 25%; } }
-@media only screen and (min-width: 992px) {
-  /* line 246, ../sass/style.scss */
-  .transwrap {
-    padding-bottom: 10px; }
-
-  /* line 249, ../sass/style.scss */
-  .metaslider {
-    margin-top: -95px; } }
-@media only screen and (min-width: 1366px) {
-  /* line 254, ../sass/style.scss */
-  .metaslider {
-    margin-top: -260px; }
-
-  /* line 257, ../sass/style.scss */
-  .theme-default .nivo-directionNav a {
-    top: 450px; }
-
-  /* line 260, ../sass/style.scss */
-  .nivo-caption {
-    top: 400px;
-    padding: 0 300px !important; } }
-/* footer */
-/* line 271, ../sass/style.scss */
-#prefooter {
-  color: #fff; }
-  /* line 273, ../sass/style.scss */
-  #prefooter .container {
-    padding: 5px 0; }
-
-/* line 275, ../sass/style.scss */
-#footer {
-  color: #fff;
-  min-height: 210px;
-  text-align: left;
-  margin-top: 10px; }
-  /* line 280, ../sass/style.scss */
-  #footer li {
-    list-style-type: none;
-    color: #fff; }
-  /* line 284, ../sass/style.scss */
-  #footer h2, #footer h5, #footer a {
-    color: #fff; }
-  /* line 287, ../sass/style.scss */
-  #footer h4 {
-    font-size: 20px; }
-
-/* line 292, ../sass/style.scss */
-.copyright {
-  margin-top: 40px; }
-
-/* line 296, ../sass/style.scss */
-.designedBy {
-  background-image: url(../img/designedbysprite.jpg);
-  background-position: 0 0;
-  width: 89px;
-  height: 29px;
-  float: right;
-  background-repeat: no-repeat;
-  overflow: hidden;
-  margin-top: 30px; }
-
-/* line 305, ../sass/style.scss */
-.designedBy:hover {
-  background-image: url(../img/designedbysprite.jpg);
-  background-position: 0 -29px; }
-
-/* site social icons */
-/* line 311, ../sass/style.scss */
-.social-links {
-  margin: 8px 0 0 -40px; }
-  /* line 313, ../sass/style.scss */
-  .social-links h2 {
-    position: absolute;
-    margin-left: -9999px; }
-  /* line 317, ../sass/style.scss */
-  .social-links li {
-    margin-right: 10px;
-    list-style: none;
-    display: inline; }
-  /* line 322, ../sass/style.scss */
-  .social-links li a {
-    overflow: hidden; }
-  /* line 325, ../sass/style.scss */
-  .social-links .fa {
-    color: #fff;
-    font-size: 2.4rem;
-    text-decoration: none; }
-
-/* line 332, ../sass/style.scss */
-#topbar .social-links {
-  margin: 0; }
-/* line 335, ../sass/style.scss */
-#topbar .social-links .fa {
-  color: #fff;
-  font-size: 1.8rem;
-  padding: 10px;
-  margin: 0; }
-/* line 341, ../sass/style.scss */
-#topbar .social-links .fa:hover {
-  background-color: #fff;
-  color: #56729A; }
-
-/* buttons and forms*/
-/* line 349, ../sass/style.scss */
-.btn, input#fscf_submit1 {
-  margin-top: 20px;
-  border: 1px solid #A2B464;
-  transition: background-color 0.5s ease;
-  background-color: white;
-  color: #56729A;
-  font-size: 1.8rem;
-  -moz-border-radius: 0;
-  -webkit-border-radius: 0;
-  border-radius: 0; }
-  /* line 357, ../sass/style.scss */
-  .btn .fa, input#fscf_submit1 .fa {
-    padding-left: 10px; }
-
-/* line 361, ../sass/style.scss */
-.btn:hover, input#fscf_submit1:hover {
-  background-color: #A2B464;
-  color: #fff; }
-
-/* line 365, ../sass/style.scss */
-input, textarea, select {
-  border: 1px solid #A2B464; }
-
-/* line 368, ../sass/style.scss */
-label {
-  margin-bottom: 10px; }
-
-/* line 371, ../sass/style.scss */
-.screen-reader-text {
-  display: none; }
-
-@media only screen and (min-width: 768px) {
-  /* line 375, ../sass/style.scss */
-  #FSContact1 label {
-    width: 200px;
-    float: left; }
-
-  /* line 379, ../sass/style.scss */
-  div#fscf_submit_div1 {
-    padding-left: 200px; } }
-/* line 386, ../sass/style.scss */
-button#catapultCookie {
-  background-color: #A2B464;
-  color: #fff; }
-
-/* line 392, ../sass/style.scss */
-.easy_t_single_testimonial {
-  outline: 1px solid #A2B464;
-  margin-bottom: 30px; }
-
-/* line 396, ../sass/style.scss */
-.easy_t_single_testimonial {
-  position: relative; }
-
-/* line 399, ../sass/style.scss */
-.easy_testimonial:after {
-  background-image: url("../img/quote.gif");
-  position: absolute;
-  background-repeat: no-repeat;
-  content: " ";
-  display: block;
-  width: 23px;
-  height: 23px;
-  bottom: -23px;
-  left: 20px; }
-
-/* line 408, ../sass/style.scss */
-.testimonial_body {
-  color: #56729A; }
-
-/* line 411, ../sass/style.scss */
-.easy_testimonial_image_wrapper {
-  display: none; }
-
-/* line 414, ../sass/style.scss */
-.testimonial_author {
-  margin-top: 15px;
-  color: #A2B464; }
-
-/* line 418, ../sass/style.scss */
-blockquote {
-  border-left: 5px solid #A2B464; }
-
-/* line 423, ../sass/style.scss */
-.ewd-ufaq-post-margin-symbol span {
-  font-size: 16px !important;
-  margin-top: 6px !important; }
-
-/* line 427, ../sass/style.scss */
-.ewd-ufaq-post-margin-symbol {
-  color: white;
-  background-color: #A2B464; }
-
-/* line 431, ../sass/style.scss */
-.ewd-ufaq-post-active .ewd-ufaq-post-margin-symbol, .ewd-ufaq-post-margin-symbol:hover {
-  background-color: #56729A; }
-
-/* responsive adjustments */
-/* small phones */
-/* Extra Small Devices, Tablets - col-xs-x */
-@media only screen and (max-width: 768px) {
-  /* line 444, ../sass/style.scss */
-  .navbar .navbar-collapse {
-    text-align: right; } }
-/* Small Devices, Desktops - col-sm-x  */
-@media only screen and (min-width: 768px) {
-  /* line 451, ../sass/style.scss */
-  .navbar {
-    margin-bottom: 0px; }
-
-  /* center navbar */
-  /* line 456, ../sass/style.scss */
-  #mainnav .navbar-nav {
-    float: none;
-    margin: 0 auto;
-    display: block;
-    text-align: center;
-    border-top: solid 1px #56729A;
-    border-bottom: solid 1px #56729A; }
-  /* line 464, ../sass/style.scss */
-  #mainnav .navbar-nav > li {
-    display: inline-block;
-    float: none; } }
-/* Medium Devices, Wide Screens - col-md-x */
-/* Larger Devices, Wide Screens - col-ld-x */
+body{font-family:"Open Sans",sans-serif;color:#333}h1,h2,h3,h4,h4,h5,h6,h2>a{font-family:"Lora",serif;color:#A2B464;letter-spacing:1px}h1{font-size:2.8rem}h2{font-size:2.2rem}h3{font-size:2.2rem;color:#56729A}h4{font-size:2.0rem;color:#56729A}h5{font-size:1.6rem}h6{font-size:1.6rem;color:#56729A}body,p,li{font-size:1.6rem}li>a,a{color:#56729A}li{color:#333}#content{min-height:450px}section{margin:15px 0}.home section img,.featImg img{width:100%;height:auto}.sectionOdd{padding:15px 0;margin:0}.sectionEven{padding:15px 0;margin:0}.wrapFooter{background-color:#56729A}.marginTop{margin-top:20px}.marginBottom{margin-bottom:20px}.clearfix{clear:both}hr{border-top:1px solid #A2B464}img.alignright{float:right;margin:0 0 1em 1em}img.alignleft{float:left;margin:0 1em 1em 0}img.aligncenter{display:block;margin-left:auto;margin-right:auto}.alignright{float:right}.alignleft{float:left}.aligncenter{display:block;margin-left:auto;margin-right:auto;text-align:center}p.wp-caption-text{font-size:1.0em;margin:10px 0;color:#A2B464;font-style:italic}.sitelogo img,.woocommerce-page .sitelogo img{max-width:440px;width:100%}.sitelogo{margin:10px 0}#topbar{background-color:#56729A}#topbar li{font-size:1.6rem;border-right:1px solid #728cb1}#topbar .social-links li{margin-left:15px;margin-right:-5px;border-right:none}#topbar .navbar-nav>li>a{padding-top:8px;padding-bottom:8px;color:#fff}#topbar .navbar-nav>.active>a,#topbar .navbar-nav>li>a:hover{background-color:#fff;color:#56729A}@media only screen and (min-width: 768px){#topbar{height:36px}}.navbar{margin:0;z-index:9999;background:none;border:none}.navbar li{font-size:2.0rem}.navbar-default,.navbar-default .navbar-nav>li>a{color:#56729A}.navbar-default .navbar-nav>li>a:hover,.navbar-default .navbar-nav>.open>a,.navbar-default .navbar-nav>.open>a:hover,.navbar-default .navbar-nav>.open>a:focus{background-color:#56729A;color:#fff}.navbar-default .navbar-nav>.active>a{color:#A2B464;background:none}.dropdown-menu{background-color:#56729A;text-align:right}.dropdown-menu>li>a{color:#fff}.navbar-default .navbar-nav .open .dropdown-menu>li>a{background-color:#56729A;color:#fff}.navbar-default .navbar-nav .open .dropdown-menu>li>a:hover{background-color:#fff;color:#56729A}@media only screen and (max-width: 768px){.navbar-default .navbar-nav .open .dropdown-menu>li>a{background-color:white;color:#56729A}.navbar-default .navbar-nav .open .dropdown-menu>li>a:hover{background-color:#56729A;color:#fff}}@media only screen and (min-width: 768px) and (max-width: 1200px){.navbar li{font-size:1.4rem}.nav>li>a{padding:10px 5px}}.navbar-default .navbar-toggle{border-color:white;background-color:#56729A}.navbar-default .navbar-toggle .icon-bar{background-color:white}.footermenu ul{margin:40px 0 0 -40px}.footermenu li{display:inline}.footermenu li:after{content:" | "}.footermenu li:last-child:after{content:" "}.transwrap{background-color:white;background:rgba(255,255,255,0.9);position:relative;z-index:1}.metaslider{z-index:0;margin-top:0px;max-height:700px;overflow:hidden}.nivo-caption{top:340px;padding:0 100px !important;text-align:center;font-size:50px;background:none !important;opacity:1 !important}.theme-default .nivo-caption a{border:0 !important}.theme-default .nivo-caption a:hover{text-decoration:none}.theme-default a.nivo-prevNav{left:40px !important}.theme-default a.nivo-nextNav{right:40px !important}@media only screen and (max-width: 480px){.theme-default .nivo-caption{display:none !important}}@media only screen and (max-width: 768px){.nivo-caption{font-size:32px;top:80px}}@media only screen and (min-width: 769px){.metaslider{margin-top:-80px}.theme-default .nivo-directionNav a{top:280px}.nivo-caption{top:220px}}@media only screen and (min-width: 1200px){.metaslider{margin-top:-90px}.theme-default .nivo-directionNav a{top:375px}.nivo-caption{padding:0 300px !important;top:280px}}#prefooter{color:#fff}#prefooter .container{padding:5px 0}#footer{color:#fff;min-height:210px;text-align:left;margin-top:10px}#footer li{list-style-type:none;color:#fff}#footer h2,#footer h5,#footer a{color:#fff}#footer h4{font-size:20px}.copyright{margin-top:40px}.designedBy{background-image:url(../img/designedbysprite.jpg);background-position:0 0;width:89px;height:29px;float:right;background-repeat:no-repeat;overflow:hidden;margin-top:30px}.designedBy:hover{background-image:url(../img/designedbysprite.jpg);background-position:0 -29px}.social-links{margin:8px 0 0 -40px}.social-links h2{position:absolute;margin-left:-9999px}.social-links li{margin-right:10px;list-style:none;display:inline}.social-links li a{overflow:hidden}.social-links .fa{color:#fff;font-size:2.4rem;text-decoration:none}#topbar .social-links{margin:0}#topbar .social-links .fa{color:#fff;font-size:1.8rem;padding:10px;margin:0}#topbar .social-links .fa:hover{background-color:#fff;color:#56729A}.btn,input#fscf_submit1{margin-top:20px;border:1px solid #A2B464;transition:background-color 0.5s ease;background-color:white;color:#56729A;font-size:1.8rem;-moz-border-radius:0;-webkit-border-radius:0;border-radius:0}.btn .fa,input#fscf_submit1 .fa{padding-left:10px}.btn:hover,input#fscf_submit1:hover{background-color:#A2B464;color:#fff}input,textarea,select{border:1px solid #A2B464;background-color:#fff}label{margin-bottom:10px}.screen-reader-text{display:none}@media only screen and (min-width: 768px){#FSContact1 label{width:200px;float:left}div#fscf_submit_div1{padding-left:200px}}button#catapultCookie{background-color:#A2B464;color:#fff}.easy_t_single_testimonial{outline:1px solid #A2B464;margin-bottom:30px}.easy_t_single_testimonial{position:relative}.easy_testimonial:after{background-image:url("../img/quote.gif");position:absolute;background-repeat:no-repeat;content:" ";display:block;width:23px;height:23px;bottom:-23px;left:20px}.testimonial_body{color:#56729A}.easy_testimonial_image_wrapper{display:none}.testimonial_author{margin-top:15px;color:#A2B464}blockquote{border-left:5px solid #A2B464}span.date{display:none !important}.ewd-ufaq-post-margin-symbol span{font-size:16px !important;margin-top:6px !important}.ewd-ufaq-post-margin-symbol{color:white;background-color:#A2B464}.ewd-ufaq-post-active .ewd-ufaq-post-margin-symbol,.ewd-ufaq-post-margin-symbol:hover{background-color:#56729A}@media only screen and (max-width: 768px){.navbar .navbar-collapse{text-align:right}}@media only screen and (min-width: 768px){#mainnav .navbar-nav{float:none;margin:10px auto;display:block;text-align:center;border-top:solid 1px #56729A;border-bottom:solid 1px #56729A}#mainnav .navbar-nav>li{display:inline-block;float:none}}
