--- a/css/woocommerce-custom.css
+++ b/css/woocommerce-custom.css
@@ -1,274 +1,1 @@
-/* line 11, ../sass/woocommerce-custom.scss */
-.widget_product_categories ul {
-  margin: 0; }
-  /* line 14, ../sass/woocommerce-custom.scss */
-  .widget_product_categories ul li {
-    list-style: none;
-    margin-bottom: .618em;
-    margin-left: -1.618em; }
-    /* line 19, ../sass/woocommerce-custom.scss */
-    .widget_product_categories ul li:before {
-      font-family: FontAwesome;
-      margin-right: .53em;
-      opacity: 0.25;
-      content: "\f114"; }
-    /* line 27, ../sass/woocommerce-custom.scss */
-    .widget_product_categories ul li.current-cat:before {
-      content: "\f115"; }
-/* line 34, ../sass/woocommerce-custom.scss */
-.widget_product_categories .children {
-  margin-top: .618em;
-  margin-left: .618em; }
-
-/* line 43, ../sass/woocommerce-custom.scss */
-td.label {
-  color: #333;
-  font-size: 100%; }
-
-/* line 51, ../sass/woocommerce-custom.scss */
-.woocommerce .widget_price_filter .ui-slider .ui-slider-range {
-  background-color: #A2B464; }
-/* line 54, ../sass/woocommerce-custom.scss */
-.woocommerce .widget_price_filter .price_slider_wrapper .ui-widget-content, .woocommerce .widget_price_filter .ui-slider .ui-slider-handle {
-  background-color: #56729A; }
-
-/* line 60, ../sass/woocommerce-custom.scss */
-.woocommerce .widget_shopping_cart .total {
-  border-top: 3px double #56729A; }
-
-/* line 65, ../sass/woocommerce-custom.scss */
-.widgetSidebar {
-  margin-bottom: 40px; }
-
-/* line 68, ../sass/woocommerce-custom.scss */
-img.attachment-shop_thumbnail.size-shop_thumbnail.wp-post-image {
-  height: 80px;
-  width: 80px; }
-
-/* line 72, ../sass/woocommerce-custom.scss */
-h2.widgettitle {
-  padding: 10px 0; }
-
-/* line 75, ../sass/woocommerce-custom.scss */
-.widgetSidebar h2.widgettitle {
-  border-top: 1px solid #56729A;
-  border-bottom: 1px solid #56729A; }
-
-/* line 81, ../sass/woocommerce-custom.scss */
-.woocommerce span.onsale {
-  background-color: #8D9A5E;
-  font-weight: 300;
-  line-height: 2.4;
-  font-size: 24px;
-  min-height: 0;
-  min-width: 0;
-  top: 20px; }
-
-/* line 93, ../sass/woocommerce-custom.scss */
-.woocommerce #respond input#submit, .woocommerce a.button, .woocommerce button.button, .woocommerce input.button {
-  transition: background-color 0.5s ease;
-  background-color: white;
-  color: #56729A;
-  border: 1px solid #A2B464;
-  border-radius: 0;
-  font-weight: 300; }
-/* line 101, ../sass/woocommerce-custom.scss */
-.woocommerce a.button:hover, .woocommerce button.button:hover, .woocommerce input.button:hover {
-  background-color: #8D9A5E;
-  color: #fff; }
-/* line 105, ../sass/woocommerce-custom.scss */
-.woocommerce #respond input#submit.alt, .woocommerce a.button.alt, .woocommerce button.button.alt, .woocommerce input.button.alt {
-  background-color: #8D9A5E;
-  color: #fff; }
-/* line 109, ../sass/woocommerce-custom.scss */
-.woocommerce #respond input#submit:hover, .woocommerce #respond input#submit.alt:hover, .woocommerce a.button.alt:hover, .woocommerce button.button.alt:hover, .woocommerce input.button.alt:hover {
-  background: #8D9A5E;
-  color: #fff; }
-
-/* line 114, ../sass/woocommerce-custom.scss */
-button.single_add_to_cart_button.button.alt {
-  background: #A2B464; }
-
-/* line 117, ../sass/woocommerce-custom.scss */
-button.single_add_to_cart_button.button.alt:hover {
-  background: #8D9A5E; }
-
-/* line 122, ../sass/woocommerce-custom.scss */
-.woocommerce #respond input#submit.alt.disabled, .woocommerce #respond input#submit.alt.disabled:hover, .woocommerce #respond input#submit.alt:disabled, .woocommerce #respond input#submit.alt:disabled:hover, .woocommerce #respond input#submit.alt:disabled[disabled], .woocommerce #respond input#submit.alt:disabled[disabled]:hover, .woocommerce a.button.alt.disabled, .woocommerce a.button.alt.disabled:hover, .woocommerce a.button.alt:disabled, .woocommerce a.button.alt:disabled:hover, .woocommerce a.button.alt:disabled[disabled], .woocommerce a.button.alt:disabled[disabled]:hover, .woocommerce button.button.alt.disabled, .woocommerce button.button.alt.disabled:hover, .woocommerce button.button.alt:disabled, .woocommerce button.button.alt:disabled:hover, .woocommerce button.button.alt:disabled[disabled], .woocommerce button.button.alt:disabled[disabled]:hover, .woocommerce input.button.alt.disabled, .woocommerce input.button.alt.disabled:hover, .woocommerce input.button.alt:disabled, .woocommerce input.button.alt:disabled:hover, .woocommerce input.button.alt:disabled[disabled], .woocommerce input.button.alt:disabled[disabled]:hover {
-  background-color: #A2B464; }
-
-/* line 127, ../sass/woocommerce-custom.scss */
-.woocommerce ul.products li.product .button {
-  display: none; }
-
-/* line 132, ../sass/woocommerce-custom.scss */
-.woocommerce div.product p.price, .woocommerce div.product span.price, span.woocommerce-Price-amount.amount {
-  color: #8D9A5E; }
-
-/* line 135, ../sass/woocommerce-custom.scss */
-del span.woocommerce-Price-amount.amount {
-  color: #fff; }
-
-/* line 138, ../sass/woocommerce-custom.scss */
-ins {
-  text-decoration: none;
-  color: #fff; }
-
-/* line 142, ../sass/woocommerce-custom.scss */
-.woocommerce ul.products li.product .price {
-  font-size: 1.2em; }
-
-/* line 147, ../sass/woocommerce-custom.scss */
-.woocommerce .star-rating, .woocommerce .stars a {
-  color: #A2B464; }
-
-/* line 150, ../sass/woocommerce-custom.scss */
-.woocommerce .star-rating:before {
-  color: #A2B464; }
-
-/* line 155, ../sass/woocommerce-custom.scss */
-.woocommerce ul.cart_list li a, .woocommerce ul.product_list_widget li a {
-  font-weight: 300; }
-
-/* line 161, ../sass/woocommerce-custom.scss */
-.woocommerce.columns-2 {
-  max-height: 350px;
-  overflow: hidden; }
-
-/* line 165, ../sass/woocommerce-custom.scss */
-.woocommerce.columns-3 {
-  max-height: 300px;
-  overflow: hidden; }
-
-/* line 169, ../sass/woocommerce-custom.scss */
-.woocommerce.columns-4 {
-  max-height: 100%; }
-
-/* line 172, ../sass/woocommerce-custom.scss */
-.featuredprods {
-  margin-top: 40px; }
-
-/* line 178, ../sass/woocommerce-custom.scss */
-.woocommerce .catimage {
-  max-height: 260px;
-  overflow: hidden;
-  z-index: -1;
-  margin-bottom: 30px; }
-
-/* line 189, ../sass/woocommerce-custom.scss */
-.woocommerce-result-count {
-  display: none; }
-
-/* line 192, ../sass/woocommerce-custom.scss */
-.woocommerce .products ul, .woocommerce ul.products {
-  padding-top: 20px; }
-
-/* line 198, ../sass/woocommerce-custom.scss */
-li.product-category h3 {
-  position: absolute;
-  top: 25%;
-  width: 100%;
-  text-align: center;
-  color: white;
-  background: rgba(86, 114, 154, 0.8); }
-
-/* line 206, ../sass/woocommerce-custom.scss */
-.woocommerce ul.products li.product-category h3 {
-  font-size: 2.5em; }
-
-/* line 211, ../sass/woocommerce-custom.scss */
-span.posted_in {
-  display: none; }
-
-/* line 214, ../sass/woocommerce-custom.scss */
-.woocommerce .quantity .qty {
-  height: 32px; }
-
-/* line 217, ../sass/woocommerce-custom.scss */
-.woocommerce div.product form.cart .button {
-  margin-left: 43px; }
-
-/* line 220, ../sass/woocommerce-custom.scss */
-.variations .label {
-  color: #333;
-  font-size: 14px; }
-
-/* line 225, ../sass/woocommerce-custom.scss */
-.woocommerce #reviews #comments ol.commentlist li .comment-text {
-  margin: 0 0 0 -40px !important;
-  border: 1px solid #A2B464 !important;
-  border-radius: 0 !important; }
-
-/* line 230, ../sass/woocommerce-custom.scss */
-.tagged_as {
-  display: none; }
-
-/* line 235, ../sass/woocommerce-custom.scss */
-.woocommerce div.product .woocommerce-tabs ul.tabs {
-  padding: 0 0 0 5px; }
-  /* line 237, ../sass/woocommerce-custom.scss */
-  .woocommerce div.product .woocommerce-tabs ul.tabs li {
-    background: #A2B464;
-    border-radius: 0;
-    position: initial; }
-  /* line 242, ../sass/woocommerce-custom.scss */
-  .woocommerce div.product .woocommerce-tabs ul.tabs li.active {
-    background: #fff; }
-  /* line 245, ../sass/woocommerce-custom.scss */
-  .woocommerce div.product .woocommerce-tabs ul.tabs li:hover {
-    background: #8D9A5E; }
-  /* line 248, ../sass/woocommerce-custom.scss */
-  .woocommerce div.product .woocommerce-tabs ul.tabs li a:hover {
-    color: #fff; }
-  /* line 251, ../sass/woocommerce-custom.scss */
-  .woocommerce div.product .woocommerce-tabs ul.tabs li:after, .woocommerce div.product .woocommerce-tabs ul.tabs li:before {
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0; }
-  /* line 255, ../sass/woocommerce-custom.scss */
-  .woocommerce div.product .woocommerce-tabs ul.tabs li a {
-    color: #fff;
-    font-weight: 300; }
-
-/* line 260, ../sass/woocommerce-custom.scss */
-.woocommerce div.product .woocommerce-tabs ul.tabs:before {
-  border: none; }
-
-/* line 265, ../sass/woocommerce-custom.scss */
-.woocommerce-info {
-  border-top-color: #8D9A5E; }
-
-/* line 268, ../sass/woocommerce-custom.scss */
-.woocommerce-info:before {
-  color: #8D9A5E; }
-
-/* line 275, ../sass/woocommerce-custom.scss */
-.woocommerce form.login, .woocommerce form.register {
-  max-width: 500px; }
-
-/* line 278, ../sass/woocommerce-custom.scss */
-input#coupon_code {
-  width: 200px !important; }
-
-/* line 283, ../sass/woocommerce-custom.scss */
-.woocommerce nav.woocommerce-pagination ul {
-  border-color: #A2B464; }
-
-/* line 286, ../sass/woocommerce-custom.scss */
-.woocommerce nav.woocommerce-pagination ul li span.current {
-  background-color: #A2B464;
-  color: #fff; }
-
-/* Small Devices, Desktops - col-sm-x  */
-@media only screen and (max-width: 600px) {
-  /* line 295, ../sass/woocommerce-custom.scss */
-  .woocommerce .term-description {
-    display: none; } }
-/* larger devices and desktops  */
-@media only screen and (min-width: 768px) {
-  /* line 303, ../sass/woocommerce-custom.scss */
-  #woocommerce ul.products li.product {
-    width: 30.8%; }
-
-  /* line 306, ../sass/woocommerce-custom.scss */
-  #woocommerce .related ul.products li.product {
-    width: 29.5%; } }
+.widget_product_categories ul{margin:0}.widget_product_categories ul li{list-style:none;margin-bottom:.618em;margin-left:-1.618em}.widget_product_categories ul li:before{font-family:FontAwesome;margin-right:.53em;opacity:0.25;content:"\f114"}.widget_product_categories ul li.current-cat:before{content:"\f115"}.widget_product_categories .children{margin-top:.618em;margin-left:.618em}td.label{color:#333;font-size:100%}.woocommerce .widget_price_filter .ui-slider .ui-slider-range{background-color:#A2B464}.woocommerce .widget_price_filter .price_slider_wrapper .ui-widget-content,.woocommerce .widget_price_filter .ui-slider .ui-slider-handle{background-color:#56729A}.woocommerce .widget_shopping_cart .total{border-top:3px double #56729A}.widgetSidebar{margin-bottom:40px}img.attachment-shop_thumbnail.size-shop_thumbnail.wp-post-image{height:80px;width:80px}h2.widgettitle{padding:10px 0}.widgetSidebar h2.widgettitle{border-top:1px solid #56729A;border-bottom:1px solid #56729A}.woocommerce span.onsale{background-color:#8D9A5E;font-weight:300;line-height:2.4;font-size:24px;min-height:0;min-width:0;top:20px}.woocommerce #respond input#submit,.woocommerce a.button,.woocommerce button.button,.woocommerce input.button{transition:background-color 0.5s ease;background-color:white;color:#56729A;border:1px solid #A2B464;border-radius:0;font-weight:300}.woocommerce a.button:hover,.woocommerce button.button:hover,.woocommerce input.button:hover{background-color:#8D9A5E;color:#fff}.woocommerce #respond input#submit.alt,.woocommerce a.button.alt,.woocommerce button.button.alt,.woocommerce input.button.alt{background-color:#8D9A5E;color:#fff}.woocommerce #respond input#submit:hover,.woocommerce #respond input#submit.alt:hover,.woocommerce a.button.alt:hover,.woocommerce button.button.alt:hover,.woocommerce input.button.alt:hover{background:#8D9A5E;color:#fff}button.single_add_to_cart_button.button.alt{background:#A2B464}button.single_add_to_cart_button.button.alt:hover{background:#8D9A5E}.woocommerce #respond input#submit.alt.disabled,.woocommerce #respond input#submit.alt.disabled:hover,.woocommerce #respond input#submit.alt:disabled,.woocommerce #respond input#submit.alt:disabled:hover,.woocommerce #respond input#submit.alt:disabled[disabled],.woocommerce #respond input#submit.alt:disabled[disabled]:hover,.woocommerce a.button.alt.disabled,.woocommerce a.button.alt.disabled:hover,.woocommerce a.button.alt:disabled,.woocommerce a.button.alt:disabled:hover,.woocommerce a.button.alt:disabled[disabled],.woocommerce a.button.alt:disabled[disabled]:hover,.woocommerce button.button.alt.disabled,.woocommerce button.button.alt.disabled:hover,.woocommerce button.button.alt:disabled,.woocommerce button.button.alt:disabled:hover,.woocommerce button.button.alt:disabled[disabled],.woocommerce button.button.alt:disabled[disabled]:hover,.woocommerce input.button.alt.disabled,.woocommerce input.button.alt.disabled:hover,.woocommerce input.button.alt:disabled,.woocommerce input.button.alt:disabled:hover,.woocommerce input.button.alt:disabled[disabled],.woocommerce input.button.alt:disabled[disabled]:hover{background-color:#A2B464}.woocommerce ul.products li.product .button{display:none}.woocommerce div.product p.price,.woocommerce div.product span.price,span.woocommerce-Price-amount.amount{color:#8D9A5E}del span.woocommerce-Price-amount.amount{color:#fff}ins{text-decoration:none;color:#fff}.woocommerce ul.products li.product .price{font-size:1.2em}.woocommerce .star-rating,.woocommerce .stars a{color:#A2B464}.woocommerce .star-rating:before{color:#A2B464}.woocommerce ul.cart_list li a,.woocommerce ul.product_list_widget li a{font-weight:300}.woocommerce.columns-2{max-height:350px;overflow:hidden}.woocommerce.columns-3{max-height:300px;overflow:hidden}.woocommerce.columns-4{max-height:100%}.featuredprods{margin-top:40px}.woocommerce .catimage{max-height:260px;overflow:hidden;z-index:-1;margin-bottom:30px}.woocommerce-result-count{display:none}.woocommerce .products ul,.woocommerce ul.products{padding-top:20px}li.product-category h3{position:absolute;top:25%;width:100%;text-align:center;color:white;background:rgba(86,114,154,0.8)}.woocommerce ul.products li.product-category h3{font-size:2.5em}span.posted_in{display:none}.woocommerce .quantity .qty{height:32px}.woocommerce div.product form.cart .button{margin-left:43px}.variations .label{color:#333;font-size:14px}.woocommerce #reviews #comments ol.commentlist li .comment-text{margin:0 0 0 -40px !important;border:1px solid #A2B464 !important;border-radius:0 !important}.tagged_as{display:none}.woocommerce div.product .woocommerce-tabs ul.tabs{padding:0 0 0 5px}.woocommerce div.product .woocommerce-tabs ul.tabs li{background:#A2B464;border-radius:0;position:initial}.woocommerce div.product .woocommerce-tabs ul.tabs li.active{background:#fff}.woocommerce div.product .woocommerce-tabs ul.tabs li:hover{background:#8D9A5E}.woocommerce div.product .woocommerce-tabs ul.tabs li a:hover{color:#fff}.woocommerce div.product .woocommerce-tabs ul.tabs li:after,.woocommerce div.product .woocommerce-tabs ul.tabs li:before{border-bottom-left-radius:0;border-bottom-right-radius:0}.woocommerce div.product .woocommerce-tabs ul.tabs li a{color:#fff;font-weight:300}.woocommerce div.product .woocommerce-tabs ul.tabs:before{border:none}.woocommerce-info{border-top-color:#8D9A5E}.woocommerce-info:before{color:#8D9A5E}.woocommerce form.login,.woocommerce form.register{max-width:500px}input#coupon_code{width:200px !important}.woocommerce nav.woocommerce-pagination ul{border-color:#A2B464}.woocommerce nav.woocommerce-pagination ul li span.current{background-color:#A2B464;color:#fff}@media only screen and (max-width: 600px){.woocommerce .term-description{display:none}}@media only screen and (min-width: 768px){#woocommerce ul.products li.product{width:30.8%}#woocommerce .related ul.products li.product{width:29.5%}}
