--- a/sass/woocommerce-custom.scss
+++ b/sass/woocommerce-custom.scss
@@ -194,7 +194,7 @@ ins {
 }
 
 
-// category text
+// category page
 li.product-category h3 {
     position: absolute;
     top: 25%;
@@ -206,6 +206,7 @@ li.product-category h3 {
 .woocommerce ul.products li.product-category h3 {
 	font-size: 2.5em;
 }
+
 
 // product detail page
 span.posted_in {
